--- a/src/index.css
+++ b/src/index.css
@@ -1342,12 +1342,14 @@ footer .copyright {
 
 .pagamento-endereco-container {
   margin-top: 20px;
+  
 }
 
 .pagamento-endereco-title {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
+  
 }
 
 .pagamento-endereco-input,
@@ -1383,6 +1385,43 @@ footer .copyright {
 }
 
 
+.pagamento-metodos {
+  margin: 20px 0;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.pagamento-metodos h3 {
+  font-size: 1.5rem;
+  color: #333;
+  margin-bottom: 15px;
+}
+
+.pagamento-metodos label {
+
+  margin: 10px 0;
+  font-size: 1.2rem;
+  color: #555;
+  cursor: pointer;
+}
+
+.pagamento-metodos input[type="radio"] {
+  margin-left: 15px;
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.pagamento-metodos label:hover {
+  color: #000;
+}
+
+.pagamento-metodos input[type="radio"]:checked + label {
+  font-weight: bold;
+  color: #007bff;
+}
+
 .pagamento-finalizar-compra-btn {
   display: inline-block;
   background-color: #4CAF50;
@@ -1407,6 +1446,86 @@ footer .copyright {
 /* Fim Pagamento */
 
 
+/* configura cartao */
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal-content h3 {
+  margin-bottom: 20px;
+  text-align: center;
+  color: #333;
+}
+
+.modal-content label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: #555;
+}
+
+.modal-content input,
+.modal-content select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.save-button,
+.cancel-button {
+  padding: 10px 20px;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.save-button {
+  background: #28a745;
+  color: white;
+}
+
+.save-button:hover {
+  background: #218838;
+}
+
+.cancel-button {
+  background: #dc3545;
+  color: white;
+}
+
+.cancel-button:hover {
+  background: #c82333;
+}
+
+
+
+/* fim configura cartao */
 
 /* Loading.css */
 .loading-container {
